# Super-Simple-CMake-Template

./: CMakeLists.txt  CMakePresets.json
include/: application.hpp  log.hpp
source/: application.cpp  main.cpp
